# base64

./: Cargo.toml
benches/: decode.rs  encode.rs  main.rs
src/: basic.rs  fast.rs  interface.rs  lib.rs  traits.rs  utils.rs
src/fast/: encoder.rs  mod.rs
tests/: encode.rs  test.rs
