[package]
name = "base64"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8.4", features = ["small_rng"] }
parameterized = "0.3.1"

[[bench]]
name = "encode"
harness = false
